--- a/style.css
+++ b/style.css
@@ -266,7 +266,11 @@ input, textarea {
     background-attachment: fixed;
 }
 footer{
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.9)),url(./image/happy-builders-in-reflective-vest-and-hard-hat-pointing-at-building-house-1024x684.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.9)),url(./image/footer_img.jpg);
+    background-position: top center ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed    ;
     
 }
     
